# python_basic_project

./: .gitignore  README.adoc  pyproject.toml
python_basic_project/: actions.py  shovel.py
samples/: french.yaml
